# Lesta-Games

./: .gitignore  CMakeLists.txt  README.md  main.cpp  task1.hpp
headers/: cyclicBuffer.hpp  even.hpp  quickSort.hpp
